--- a/docroot/index.html
+++ b/docroot/index.html
@@ -37,7 +37,7 @@
 					<label class="input-group-text" for="format-select">Format</label>
 					<select class="form-select" id="format-select" name="format">
 						<option value="mmcif">Annotated mmCIF</option>
-						<option value="dssp">Historic DSSP format, may fail on larger structures</option>
+						<option value="dssp">Legacy DSSP format, may fail on larger structures</option>
 					</select>
 				</div>
 
