make it valid html

--- a/docroot/license.html
+++ b/docroot/license.html
@@ -12,11 +12,10 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('about')}" />
+	<nav z2:replace="~{menu :: navbar('about')}"></nav>
 
 	<div class="container site-content">
-
-				
+			
 		<article>
 			<h2>Usage Policy</h2>
 
