Updated the download instructions to preserve the filenames with wget.

--- a/docroot/download.html
+++ b/docroot/download.html
@@ -40,8 +40,8 @@
 
 			<h3>Manually download (single entries) via the website or using <code>wget</code>:</h3>
 			<ul>
-				<li><code>wget https://pdb-redo.eu/dssp/db/9xyz/mmcif</code> downloads annotated mmCIF file</li>
-				<li><code>wget https://pdb-redo.eu/dssp/db/9xyz/legacy</code> downloads the legacy DSSP file (if available)</li>
+				<li><code>wget --content-disposition https://pdb-redo.eu/dssp/db/9xyz/mmcif</code> downloads annotated mmCIF file</li>
+				<li><code>wget --content-disposition https://pdb-redo.eu/dssp/db/9xyz/legacy</code> downloads the legacy DSSP file (if available)</li>
 			</ul>
 
 			<h3>Download entire DSSP databank using <code>rsync</code>:</h3>
