--- a/docroot/license.html
+++ b/docroot/license.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html SYSTEM "about:legacy-compat" [
-<!ENTITY nbsp "&#160;">
-]>
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:z2="http://www.hekkelman.com/libzeep/m2" lang="nl">
 
@@ -12,7 +10,7 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('about')}"></nav>
+	<nav z2:replace="~{menu :: navbar('license')}"></nav>
 
 	<div class="container site-content">
 			
