--- a/docroot/download.html
+++ b/docroot/download.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('download')}" />
+	<nav z2:replace="~{menu :: navbar('download')}"></nav>
 
 	<div class="container site-content">
 
