--- a/docroot/error.html
+++ b/docroot/error.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('token')}" />
+	<nav z2:replace="~{menu :: navbar('token')}"></nav>
 
 	<div class="container site-content">
 
