--- a/docroot/license.html
+++ b/docroot/license.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('about')}" />
+	<nav z2:replace="~{menu :: navbar('about')}"></nav>
 
 	<div class="container site-content">
 
