--- a/docroot/download.html
+++ b/docroot/download.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('download')}" />
+	<nav z2:replace="~{menu :: navbar('download')}"></nav>
 
 	<div class="container site-content">
 
@@ -40,8 +40,8 @@
 
 			<h3>Manually download (single entries) via the website or using <code>wget</code>:</h3>
 			<ul>
-				<li><code>wget https://pdb-redo.eu/dssp/db/9xyz/mmcif</code> downloads annotated mmCIF file</li>
-				<li><code>wget https://pdb-redo.eu/dssp/db/9xyz/legacy</code> downloads the legacy DSSP file (if available)</li>
+				<li><code>wget --content-disposition https://pdb-redo.eu/dssp/db/9xyz/mmcif</code> downloads annotated mmCIF file</li>
+				<li><code>wget --content-disposition https://pdb-redo.eu/dssp/db/9xyz/legacy</code> downloads the legacy DSSP file (if available)</li>
 			</ul>
 
 			<h3>Download entire DSSP databank using <code>rsync</code>:</h3>
